[gd_scene load_steps=6 format=3 uid="uid://baw7su187gthi"]

[ext_resource type="Script" uid="uid://i07lecy0mmne" path="res://Scripts/Projectiles/ProjectileBaseScript.gd" id="1_7crlt"]
[ext_resource type="Script" uid="uid://deahmnhmw0mx7" path="res://Scripts/Projectiles/ProjectileMovement.gd" id="2_tgtis"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_5d6mi"]
albedo_color = Color(1, 0, 0, 1)

[sub_resource type="SphereMesh" id="SphereMesh_5d6mi"]
material = SubResource("StandardMaterial3D_5d6mi")
radius = 0.2
height = 0.4

[sub_resource type="SphereShape3D" id="SphereShape3D_4x055"]
radius = 0.2

[node name="ProjectileBase" type="Node3D"]
script = ExtResource("1_7crlt")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
mesh = SubResource("SphereMesh_5d6mi")

[node name="ProjectileMovement" type="Node" parent="."]
script = ExtResource("2_tgtis")

[node name="Area3D" type="Area3D" parent="."]
collision_layer = 4

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
shape = SubResource("SphereShape3D_4x055")

[connection signal="area_entered" from="Area3D" to="." method="_on_area_3d_area_entered"]
[connection signal="body_entered" from="Area3D" to="." method="_on_area_3d_body_entered"]
